Now fixed the bug. Changed it so the height of dream entry is bound by anything since overflow auto didn't scroll throught the entire input. Also put a cap on the form text input

--- a/client/src/components/Dream.css
+++ b/client/src/components/Dream.css
@@ -1,6 +1,5 @@
 .dream-list {
   box-shadow: rgba(0, 0, 0, 0.15) -5px 1.95px 2.6px;
-  height: 15vh;
   width: 95%;
   display: flex;
   float: left;
@@ -21,6 +20,8 @@
   align-self: center;
   width: 50%;
   font-size: 110%;
+  padding-right: 1%;
+  padding-left: 1%;
 }
 .buttons {
   cursor: pointer;
